# Guardhire

./: .env.example  EU_AI_ACT_COMPLIANCE.md  README.md  THREAT_MODEL.md  pyproject.toml  requirements.txt
api/: main.py  models.py
api/routes/: audit.py  health.py  questions.py  screen.py
assistant/: cv_screener.py  question_generator.py
assistant/prompts/: question_prompt.py  screening_prompt.py
frontend/: index.html
red_team/: __init__.py  report_generator.py  test_suite.py
red_team/attack_vectors/: __init__.py  bias_elicitation.py  illegal_criteria.py  jailbreaks.py  pii_extraction.py  prompt_injection.py
safety/: __init__.py  audit_logger.py  bias_detector.py  illegal_criteria.py  input_guard.py  pii_redactor.py  pipeline.py  toxicity_filter.py
schemas/: questions.py  safety.py  screening.py
tests/: test_bias_detector.py  test_pii_redactor.py  test_safety_pipeline.py
tests/sample_data/: red_team_results.json  sample_cv.txt  sample_jd.txt
