[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "guardhire"
version = "0.1.0"
description = "AI-powered hiring assistant with production-grade safety layer"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "langsmith>=0.1.77",
    "httpx>=0.27.0",
    "spacy>=3.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "red_team"]
